[gd_scene load_steps=2 format=3 uid="uid://dlbk6a2lbq4e"]

[ext_resource type="Script" path="res://scenes/gui/menus/car_setup_menu.gd" id="1_4tq7e"]

[node name="CarSetup" type="TabContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4tq7e")

[node name="Suspension" type="TabBar" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Suspension"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FrontSuspension" type="Label" parent="Suspension/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Front Suspension"
vertical_alignment = 1

[node name="FrontSuspLength" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/FrontSuspLength"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Spring Length"

[node name="Slider" type="HSlider" parent="Suspension/VBoxContainer/FrontSuspLength"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
ticks_on_borders = true

[node name="Label2" type="Label" parent="Suspension/VBoxContainer/FrontSuspLength"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "0.5"

[node name="FrontSuspSpringRate" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/FrontSuspSpringRate"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Spring Rate"

[node name="SpinBox" type="SpinBox" parent="Suspension/VBoxContainer/FrontSuspSpringRate"]
layout_mode = 2
max_value = 200.0
step = 0.1

[node name="FrontSuspBumpRateLo" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/FrontSuspBumpRateLo"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "LS Bump Rate"

[node name="SpinBox" type="SpinBox" parent="Suspension/VBoxContainer/FrontSuspBumpRateLo"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="FrontSuspBumpRateHi" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/FrontSuspBumpRateHi"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "HS Bump Rate"

[node name="SpinBox" type="SpinBox" parent="Suspension/VBoxContainer/FrontSuspBumpRateHi"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="FrontSuspReboundRateLo" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/FrontSuspReboundRateLo"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "LS Rebound Rate"

[node name="SpinBox" type="SpinBox" parent="Suspension/VBoxContainer/FrontSuspReboundRateLo"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="FrontSuspReboundRateHi" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/FrontSuspReboundRateHi"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "HS Rebound Rate"

[node name="SpinBox" type="SpinBox" parent="Suspension/VBoxContainer/FrontSuspReboundRateHi"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="FrontSuspAntiRollRate" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/FrontSuspAntiRollRate"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Anti-Roll Bar Rate"

[node name="SpinBox" type="SpinBox" parent="Suspension/VBoxContainer/FrontSuspAntiRollRate"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="RearSuspension" type="Label" parent="Suspension/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Rear Suspension"
vertical_alignment = 1

[node name="RearSuspLength" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/RearSuspLength"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Spring Length"

[node name="Slider" type="HSlider" parent="Suspension/VBoxContainer/RearSuspLength"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
ticks_on_borders = true

[node name="Label2" type="Label" parent="Suspension/VBoxContainer/RearSuspLength"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "0.5"

[node name="RearSuspSpringRate" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/RearSuspSpringRate"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Spring Rate"

[node name="SpinBox" type="SpinBox" parent="Suspension/VBoxContainer/RearSuspSpringRate"]
layout_mode = 2
max_value = 200.0
step = 0.1

[node name="RearSuspBumpRateLo" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/RearSuspBumpRateLo"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "LS Bump Rate"

[node name="SpinBox" type="SpinBox" parent="Suspension/VBoxContainer/RearSuspBumpRateLo"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="RearSuspBumpRateHi" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/RearSuspBumpRateHi"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "HS Bump Rate"

[node name="SpinBox" type="SpinBox" parent="Suspension/VBoxContainer/RearSuspBumpRateHi"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="RearSuspReboundRateLo" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/RearSuspReboundRateLo"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "LS Rebound Rate"

[node name="SpinBox" type="SpinBox" parent="Suspension/VBoxContainer/RearSuspReboundRateLo"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="RearSuspReboundRateHi" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/RearSuspReboundRateHi"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "HS Rebound Rate"

[node name="SpinBox" type="SpinBox" parent="Suspension/VBoxContainer/RearSuspReboundRateHi"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="RearSuspAntiRollRate" type="HBoxContainer" parent="Suspension/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Suspension/VBoxContainer/RearSuspAntiRollRate"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Anti-Roll Bar Rate"

[node name="SpinBox" type="SpinBox" parent="Suspension/VBoxContainer/RearSuspAntiRollRate"]
layout_mode = 2
max_value = 100000.0

[node name="BackButton" type="Button" parent="Suspension/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
auto_translate = false
text = "Back"

[node name="Wheels" type="TabBar" parent="."]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Wheels"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Brakes" type="Label" parent="Wheels/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Brakes"
vertical_alignment = 1

[node name="BrakeBiasFrontBack" type="HBoxContainer" parent="Wheels/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Wheels/VBoxContainer/BrakeBiasFrontBack"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Brake Bias Front-Back"

[node name="Slider" type="HSlider" parent="Wheels/VBoxContainer/BrakeBiasFrontBack"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
ticks_on_borders = true

[node name="Label2" type="Label" parent="Wheels/VBoxContainer/BrakeBiasFrontBack"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "0.5"

[node name="Tires" type="Label" parent="Wheels/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Tires"
vertical_alignment = 1

[node name="TireModel" type="HBoxContainer" parent="Wheels/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Wheels/VBoxContainer/TireModel"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Tire Model"

[node name="OptionButton" type="OptionButton" parent="Wheels/VBoxContainer/TireModel"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="TireStiffness" type="HBoxContainer" parent="Wheels/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Wheels/VBoxContainer/TireStiffness"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Tire Stiffness"
vertical_alignment = 1

[node name="Slider" type="HSlider" parent="Wheels/VBoxContainer/TireStiffness"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
ticks_on_borders = true

[node name="Label2" type="Label" parent="Wheels/VBoxContainer/TireStiffness"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "0.5"

[node name="TireRadius" type="HBoxContainer" parent="Wheels/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Wheels/VBoxContainer/TireRadius"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Tire Radius"
vertical_alignment = 1

[node name="Slider" type="HSlider" parent="Wheels/VBoxContainer/TireRadius"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
ticks_on_borders = true

[node name="Label2" type="Label" parent="Wheels/VBoxContainer/TireRadius"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "0.3"

[node name="TireWidth" type="HBoxContainer" parent="Wheels/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Wheels/VBoxContainer/TireWidth"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Tire Width"
vertical_alignment = 1

[node name="Slider" type="HSlider" parent="Wheels/VBoxContainer/TireWidth"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 1.0
step = 0.005
value = 0.5
ticks_on_borders = true

[node name="Label2" type="Label" parent="Wheels/VBoxContainer/TireWidth"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "0.225"

[node name="TireRatedLoad" type="HBoxContainer" parent="Wheels/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Wheels/VBoxContainer/TireRatedLoad"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Tire Rated Load"
vertical_alignment = 1

[node name="Slider" type="HSlider" parent="Wheels/VBoxContainer/TireRatedLoad"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 15000.0
step = 100.0
value = 7000.0
ticks_on_borders = true

[node name="Label2" type="Label" parent="Wheels/VBoxContainer/TireRatedLoad"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "7000"

[node name="BackButton" type="Button" parent="Wheels/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
auto_translate = false
text = "Back"

[node name="Drivetrain" type="TabBar" parent="."]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Drivetrain"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AWD" type="Label" parent="Drivetrain/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "All Wheel Drive"
vertical_alignment = 1

[node name="TorqueSplit" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/TorqueSplit"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Torque Split Front-Back"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/TorqueSplit"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/TorqueSplit"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "0.5"

[node name="Gearing" type="Label" parent="Drivetrain/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Gearing"
vertical_alignment = 1

[node name="FinalRatio" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/FinalRatio"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Final ratio"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/FinalRatio"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 1.0
max_value = 5.0
step = 0.01
value = 3.7
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/FinalRatio"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "3.7"

[node name="Gear1" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/Gear1"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Gear 1 Ratio"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/Gear1"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 1.0
max_value = 5.0
step = 0.01
value = 3.7
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/Gear1"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "3.7"

[node name="Gear2" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/Gear2"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Gear 2 Ratio"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/Gear2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 1.0
max_value = 5.0
step = 0.01
value = 3.7
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/Gear2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "3.7"

[node name="Gear3" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/Gear3"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Gear 3 Ratio"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/Gear3"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 1.0
max_value = 5.0
step = 0.01
value = 3.7
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/Gear3"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "3.7"

[node name="Gear4" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/Gear4"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Gear 4 Ratio"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/Gear4"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 1.0
max_value = 5.0
step = 0.01
value = 3.7
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/Gear4"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "3.7"

[node name="Gear5" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/Gear5"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Gear 5 Ratio"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/Gear5"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 1.0
max_value = 5.0
step = 0.01
value = 3.7
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/Gear5"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "3.7"

[node name="Gear6" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/Gear6"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Gear 6 Ratio"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/Gear6"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 1.0
max_value = 5.0
step = 0.01
value = 3.7
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/Gear6"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "3.7"

[node name="ReverseRatio" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/ReverseRatio"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Reverse Ratio"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/ReverseRatio"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 1.0
max_value = 5.0
step = 0.01
value = 3.7
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/ReverseRatio"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "3.7"

[node name="FrontDiff" type="Label" parent="Drivetrain/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Front Differential
"
vertical_alignment = 1

[node name="FrontDiffPreload" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/FrontDiffPreload"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Preload"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/FrontDiffPreload"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 10.0
max_value = 200.0
step = 10.0
value = 50.0
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/FrontDiffPreload"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "50"

[node name="FrontDiffPowerRatio" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/FrontDiffPowerRatio"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Power Ratio"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/FrontDiffPowerRatio"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 3.0
step = 0.01
value = 2.0
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/FrontDiffPowerRatio"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "2.0"

[node name="FrontDiffCoastRatio" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/FrontDiffCoastRatio"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Coast Ratio"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/FrontDiffCoastRatio"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 3.0
step = 0.01
value = 2.0
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/FrontDiffCoastRatio"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "2.0"

[node name="RearDiff" type="Label" parent="Drivetrain/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Rear Differential
"
vertical_alignment = 1

[node name="RearDiffPreload" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/RearDiffPreload"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Preload"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/RearDiffPreload"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 10.0
max_value = 200.0
step = 10.0
value = 50.0
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/RearDiffPreload"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "50"

[node name="RearDiffPowerRatio" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/RearDiffPowerRatio"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Power Ratio"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/RearDiffPowerRatio"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 3.0
step = 0.01
value = 2.0
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/RearDiffPowerRatio"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "2.0"

[node name="RearDiffCoastRatio" type="HBoxContainer" parent="Drivetrain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Drivetrain/VBoxContainer/RearDiffCoastRatio"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Coast Ratio"

[node name="Slider" type="HSlider" parent="Drivetrain/VBoxContainer/RearDiffCoastRatio"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 3.0
step = 0.01
value = 2.0
ticks_on_borders = true

[node name="Label2" type="Label" parent="Drivetrain/VBoxContainer/RearDiffCoastRatio"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "2.0"

[node name="BackButton" type="Button" parent="Drivetrain/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
auto_translate = false
text = "Back"

[connection signal="value_changed" from="Suspension/VBoxContainer/FrontSuspLength/Slider" to="." method="_on_front_spring_length_changed"]
[connection signal="value_changed" from="Suspension/VBoxContainer/FrontSuspSpringRate/SpinBox" to="." method="_on_front_spring_rate_changed"]
[connection signal="value_changed" from="Suspension/VBoxContainer/FrontSuspBumpRateLo/SpinBox" to="." method="_on_front_bump_rate_lo_changed"]
[connection signal="value_changed" from="Suspension/VBoxContainer/FrontSuspBumpRateHi/SpinBox" to="." method="_on_front_bump_rate_hi_changed"]
[connection signal="value_changed" from="Suspension/VBoxContainer/FrontSuspReboundRateLo/SpinBox" to="." method="_on_front_rebound_rate_lo_changed"]
[connection signal="value_changed" from="Suspension/VBoxContainer/FrontSuspReboundRateHi/SpinBox" to="." method="_on_front_rebound_rate_hi_changed"]
[connection signal="value_changed" from="Suspension/VBoxContainer/FrontSuspAntiRollRate/SpinBox" to="." method="_on_front_anti_roll_changed"]
[connection signal="value_changed" from="Suspension/VBoxContainer/RearSuspLength/Slider" to="." method="_on_rear_spring_length_changed"]
[connection signal="value_changed" from="Suspension/VBoxContainer/RearSuspSpringRate/SpinBox" to="." method="_on_rear_spring_rate_changed"]
[connection signal="value_changed" from="Suspension/VBoxContainer/RearSuspBumpRateLo/SpinBox" to="." method="_on_rear_bump_rate_lo_changed"]
[connection signal="value_changed" from="Suspension/VBoxContainer/RearSuspBumpRateHi/SpinBox" to="." method="_on_rear_bump_rate_hi_changed"]
[connection signal="value_changed" from="Suspension/VBoxContainer/RearSuspReboundRateLo/SpinBox" to="." method="_on_rear_rebound_rate_lo_changed"]
[connection signal="value_changed" from="Suspension/VBoxContainer/RearSuspReboundRateHi/SpinBox" to="." method="_on_rear_rebound_rate_hi_changed"]
[connection signal="value_changed" from="Suspension/VBoxContainer/RearSuspAntiRollRate/SpinBox" to="." method="_on_rear_anti_roll_changed"]
[connection signal="value_changed" from="Wheels/VBoxContainer/BrakeBiasFrontBack/Slider" to="." method="_on_brake_bias_changed"]
[connection signal="item_selected" from="Wheels/VBoxContainer/TireModel/OptionButton" to="." method="_on_tire_model_selected"]
[connection signal="value_changed" from="Wheels/VBoxContainer/TireStiffness/Slider" to="." method="_on_tire_stiffness_changed"]
[connection signal="value_changed" from="Wheels/VBoxContainer/TireRadius/Slider" to="." method="_on_tire_radius_changed"]
[connection signal="value_changed" from="Wheels/VBoxContainer/TireWidth/Slider" to="." method="_on_tire_width_changed"]
[connection signal="value_changed" from="Wheels/VBoxContainer/TireRatedLoad/Slider" to="." method="_on_tire_rated_load_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/TorqueSplit/Slider" to="." method="_on_torque_split_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/FinalRatio/Slider" to="." method="_on_final_ratio_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/Gear1/Slider" to="." method="_on_gear1_ratio_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/Gear2/Slider" to="." method="_on_gear2_ratio_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/Gear3/Slider" to="." method="_on_gear3_ratio_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/Gear4/Slider" to="." method="_on_gear4_ratio_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/Gear5/Slider" to="." method="_on_gear5_ratio_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/Gear6/Slider" to="." method="_on_gear6_ratio_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/ReverseRatio/Slider" to="." method="_on_reverse_ratio_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/FrontDiffPreload/Slider" to="." method="_on_front_diff_preload_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/FrontDiffPowerRatio/Slider" to="." method="_on_front_diff_power_ratio_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/FrontDiffCoastRatio/Slider" to="." method="_on_front_diff_coast_ratio_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/RearDiffPreload/Slider" to="." method="_on_rear_diff_preload_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/RearDiffPowerRatio/Slider" to="." method="_on_rear_diff_power_ratio_changed"]
[connection signal="value_changed" from="Drivetrain/VBoxContainer/RearDiffCoastRatio/Slider" to="." method="_on_rear_diff_coast_ratio_changed"]
